--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Epicevent’s Math Blog
 description: 수학 시리즈 블로그입니다.
 
 theme: no-style-please
-
+remote_theme: riggraz/no-style-please
 # 포스트 주소 형식 설정
 permalink: /:categories/:slug.html
 favicon: "logo.png"
