--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Epicevent’s Math Blog
 description: 수학 시리즈 블로그입니다.
 
-theme: no-style-please
+#theme: no-style-please
 remote_theme: riggraz/no-style-please
 # 포스트 주소 형식 설정
 permalink: /:categories/:slug.html
