--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,14 @@ kramdown:
   syntax_highlighter_opts:
     disable : true
 
-mathjax: true
+jektex:
+  cache_dir: ".jektex-cache"
+  ignore: ["*.xml"]
+  silent: false
+  macros:
+    - ["\\Q", "\\mathbb{Q}"]
+    - ["\\C", "\\mathbb{C}"]
+
 
 # (선택) collections 항목 제거 또는 빈 객체로 설정
 collections: {}
